# tfm-alzheimer-classification

./: .gitignore  QUICKSTART.md  README.md  Segundo_Archivo_clean.xlsx  pyproject.toml  requirements-app.txt
.devcontainer/: devcontainer.json
alzheimer-classification-app/: .gitignore  DEPLOYMENT.md  LICENSE  PACKAGE_INFO.md  QUICKSTART.md  README.md  app.py  app_utils.py  run_app.sh
alzheimer-classification-app/data/: integrado_updated_2_ann.xlsx  residuales_grupos3.xlsx  residuales_sin_group.xlsx
alzheimer-classification-app/experiments/: stage1_c_sweep_cascade.py  yellow_only_stage2_experiment.py
alzheimer-classification-app/pages/: 1_📊_Exploración.py  2_🔍_Selección_Variables.py  3_🤖_Configuración_Modelos.py  4_📈_Evaluación.py  5_⚠️_Análisis_Errores.py  6_🔮_Predicción.py  7_🧪_Sistema_Cascada.py
experiments/: blending_ensemble_experiment.py  cascade_robustness_analysis.py  cascade_yellow_only_gridsearch.py  stacking_second_model_experiment.py
latex_tfm/: Documento_maestro.aux  Documento_maestro.bbl  Documento_maestro.bcf  Documento_maestro.blg  Documento_maestro.glo  Documento_maestro.ist  Documento_maestro.lof  Documento_maestro.lot  Documento_maestro.out  Documento_maestro.tex  Documento_maestro.toc  apendice_ejemplo.aux  apendice_ejemplo.tex  bibliografia.bib
latex_tfm/capitulos/: 1.introduccion.aux  1.introduccion.tex  2.estado_del_arte.aux  2.estado_del_arte.tex  3.materiales_y_metodos.aux  3.materiales_y_metodos.tex  4.resultados.aux  4.resultados.tex  5.conclusiones.aux  5.conclusiones.tex
latex_tfm/otros/: abstract.aux  abstract.tex  acronimos.aux  acronimos.tex  agradecimientos.aux  agradecimientos.tex  portada.aux  portada.tex  resumen.aux  resumen.tex
tfm_alzheimer_classification/: __init__.py
utils/: Dockerfile  tfm.code-workspace
