[project]
name = "tfm-alzheimer-classification"
dynamic = ["version"]
description = "A Python project for Alzheimer's disease classification using machine learning techniques."
authors = [{ name = "Joan Carrio Miñana", email = "jcarrio12@alumno.uned.es" }]
requires-python = ">=3.12,<4.0"

[project.urls]
repository = "https://github.com/jcarrio-uned/tfm-alzheimer-classification"
documentation = "https://github.com/jcarrio-uned/tfm-alzheimer-classification"

[tool.poetry]
requires-poetry = ">=2.0"
readme = ["README.md"]
package-mode = false
version = "0.0.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ruff = "0.12.3"

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "COM812", # COM812: missing-trailing-comma
    "D203",   # D203: one-blank-line-before-class
    "D212",   # D212: Multi-line docstring summary should start at the first line
    "EM102",  # EM102: f-string-in-exception
    "FBT001", # FBT001: boolean-type-hint-positional-argument
    "FBT002", # FBT002: boolean-default-value-positional-argument
    "G004",   # G004: logging-f-string
    "ISC001", # ISC001: single-line-implicit-string-concatenation
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = """
{%- if distance == 0 -%}
{{ base }}
{%- else -%}
{{ base }}+post.{{ distance }}.{{ commit }}
{%- endif -%}
"""
style = "semver"
pattern = "(?P<base>\\d+\\.\\d+\\.[\\d\\a-zA-Z\\.\\-\\+]+)"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
